--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/ruth-duda/angelfood#readme",
   "dependencies": {
+    "ask-sdk": "^2.1.0",
+    "ask-sdk-core": "^2.1.0",
     "jest": "^23.6.0",
     "virtual-alexa": "^0.6.6"
   }
